Working links update

--- a/views/default/administrative_management.mustache
+++ b/views/default/administrative_management.mustache
@@ -1,7 +1,11 @@
+<link rel=stylesheet href=/base.css>
+
 <h1> Training Materials </h1>
+
+{{> error_success }}
 
 <form method=post>
     <textarea name=links>{{links}}</textarea>
 
-    <input type=submit value=Update>
+    <input class="button large" type=submit value=Update>
 </form>
