User error_success partial

--- a/views/default/create_session.mustache
+++ b/views/default/create_session.mustache
@@ -1,4 +1,4 @@
-{{#error}}<p><b>Error:</b> {{.}}</p>{{/error}}
+{{> error_success }}
 
 <form method=post>
     <label> Promo Code <input type=text name=promo_code value="{{promo_code}}"> </label>
