--- a/views/default/create_admin_session.mustache
+++ b/views/default/create_admin_session.mustache
@@ -1,6 +1,6 @@
 <h1> Administrative Login </h1>
 
-{{#error}}<p><b>Error:</b> {{.}}</p>{{/error}}
+{{> error_success }}
 
 <form method=post>
     <label> Login <input type=text name=login value="{{login}}"> </label>
