--- a/views/default/index.mustache
+++ b/views/default/index.mustache
@@ -1,1 +1,6 @@
-Training material links go here.
+{{< default/layout }}
+    {{$content}}
+        Training material links go here.
+    {{/content}}
+{{/ default/layout }}
+
