--- a/views/default/administrative_management.mustache
+++ b/views/default/administrative_management.mustache
@@ -1,11 +1,14 @@
-<link rel=stylesheet href=/base.css>
+{{< default/layout }}
+    {{$content}}
+        <h1> Training Materials </h1>
 
-<h1> Training Materials </h1>
+        {{> error_success }}
 
-{{> error_success }}
+        <form method=post>
+            <textarea name=links>{{links}}</textarea>
 
-<form method=post>
-    <textarea name=links>{{links}}</textarea>
+            <input class="button large" type=submit value=Update>
+        </form>
+    {{/content}}
+{{/ default/layout }}
 
-    <input class="button large" type=submit value=Update>
-</form>
