--- a/views/default/create_admin_session.mustache
+++ b/views/default/create_admin_session.mustache
@@ -1,11 +1,16 @@
-<h1> Administrative Login </h1>
+{{< default/layout }}
+    {{$content}}
+        <h1> Administrative Login </h1>
 
-{{> error_success }}
+        {{> error_success }}
 
-<form method=post>
-    <label> Login <input type=text name=login value="{{login}}"> </label>
-    <label> Password <input type=password name=password value="{{password}}"> </label>
-    <input type=submit value="Login">
-</form>
+        <form method=post>
+            <label> Login <input type=text name=login value="{{login}}"> </label>
+            <label> Password <input type=password name=password value="{{password}}"> </label>
+            <input class=button type=submit value="Login">
+        </form>
 
-<a href="/create_session">Training Login</a>
+        <a href="/create_session">Training Login</a>
+    {{/content}}
+{{/ default/layout }}
+
