--- a/views/default/index.mustache
+++ b/views/default/index.mustache
@@ -1,6 +1,12 @@
 {{< default/layout }}
     {{$content}}
-        Training material links go here.
+        <h1> Training Materials </h1>
+        <dl>
+            {{#sections}}
+                {{#section_name}} <dt>{{.}}</dt> {{/section_name}}
+                {{#links}} <dd> <a href="{{url}}">{{name}}</a> </dd> {{/links}}
+            {{/sections}}
+        </dl>
     {{/content}}
 {{/ default/layout }}
 
