--- a/views/default/layout.mustache
+++ b/views/default/layout.mustache
@@ -11,6 +11,8 @@
         <link rel=stylesheet href=/base.css>
     </head>
     <body>
+        {{#authenticated}} <a class=logout href=/close_session>Logout</a> {{/authenticated}}
+
         {{$content}}
         <p class=error>404 Not Found</p>
         {{/content}}
