use placeholder index

--- a/views/default/index.mustache
+++ b/views/default/index.mustache
@@ -1,12 +1,2 @@
-{{< default/layout }}
-    {{$content}}
-        <h1> Training Materials </h1>
-        <dl>
-            {{#sections}}
-                {{#section_name}} <dt>{{.}}</dt> {{/section_name}}
-                {{#links}} <dd> <a href="{{url}}">{{name}}</a> </dd> {{/links}}
-            {{/sections}}
-        </dl>
-    {{/content}}
-{{/ default/layout }}
+Index Page
 
