--- a/views/default/create_session.mustache
+++ b/views/default/create_session.mustache
@@ -1,14 +1,16 @@
 {{< default/layout }}
     {{$content}}
-        <h1> Training Login </h1>
+        <h1> Administrative Login </h1>
 
         {{> error_success }}
 
         <form method=post>
-            <label> Promo Code <input type=text name=promo_code value="{{promo_code}}"> </label>
+            <label> Login <input type=text name=login value="{{login}}"> </label>
+            <label> Password <input type=password name=password value="{{password}}"> </label>
             <input class=button type=submit value="Login">
         </form>
 
-        <a href="/create_admin_session">Admin Login</a>
+        <a href="/create_session">Training Login</a>
     {{/content}}
 {{/ default/layout }}
+
