encode template names as hex in fs

--- a/templates/75706461746573_view.mustache
+++ b/templates/75706461746573_view.mustache
@@ -1,6 +1,10 @@
 <!doctype html>
-<link rel=stylesheet href=/updates_view.css>
+<meta encoding=UTF-8>
+
+<link rel=stylesheet href=/{{theme}}_view.css>
 {{#page.custom_css}}<style>{{{.}}}</style>{{/page.custom_css}}
+
+<title>{{page.site_name}}</title>
 
 <body>
     <h1><i>{{page.site_name}}</i></h1>
