Use a nice layout

--- a/templates/alert_success.mustache
+++ b/templates/alert_success.mustache
@@ -1,2 +1,2 @@
-{{#alert}}<div class="alert"><strong>Error:</strong> {{.}}{{/alert}}
-{{#success}}<div class="success"><strong>Success:</strong> {{.}}{{/success}}
+{{#alert}}<div class="alert"><strong>Error:</strong> {{.}} </div>{{/alert}}
+{{#success}}<div class="success"><strong>Success:</strong> {{.}} </div>{{/success}}
