--- a/templates/template_x.mustache
+++ b/templates/template_x.mustache
@@ -1,6 +1,7 @@
 {{< layout }}
     {{$content}}
-        <h1> {{app}} Update Template </h1>
+        <h1> {{app}} Update Template</h1>
+        <a href="/templates/{{name}}/delete">Delete Template</a>
 
         {{> alert_success }}
 
