--- a/templates/templates.mustache
+++ b/templates/templates.mustache
@@ -2,6 +2,8 @@
     {{$content}}
         <h1>{{app}} Templates</h1>
 
+        {{> alert_success }}
+
         <ul>
             {{#templates}}
             <li> <a href={{url}}>&#147;{{name}}&#148; template</a>
