--- a/templates/templates.mustache
+++ b/templates/templates.mustache
@@ -1,6 +1,7 @@
 {{< layout }}
     {{$content}}
         <h1>{{app}} Templates</h1>
+        <a href="/templates/create">Add New Template</a>
 
         {{> alert_success }}
 
