Working page update

--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -11,7 +11,7 @@
             <div class=wrapper>
                 <h1 class="title"> {{ app }} </h1>
 
-                <a class="menu-item active" href="/templates">
+                <a class="menu-item" href="/templates">
                     <li>Templates</li>
                 </a>
                 <a class=menu-item href="/pages">
