Add manager login to main screen

--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,3 +1,5 @@
+<a href="/pages">{{app}} Login</a>
+<hr>
 <h1>{{app}} Page Repository</h1>
 
 {{#pages}}
@@ -7,3 +9,5 @@
 {{^pages}}
 <li> Nothing to see here!
 {{/pages}}
+
+
