--- a/templates/default_view.mustache
+++ b/templates/default_view.mustache
@@ -1,2 +1,2 @@
-{{#page}} <pre>{{.}} {{/page}}
-{{^page}} Nothing here. {{/page}}
+{{#page.details}} <pre>{{.}} {{/page.details}}
+{{^page.details}} Nothing here. {{/page.details}}
