--- a/templates/page_x.mustache
+++ b/templates/page_x.mustache
@@ -14,7 +14,9 @@
                 Page Name
                 <input name=name value="{{name}}" placeholder="Page Name">
             </label>
+
             {{#create}}
+            <input type=hidden name=create value=1>
             <label>
                 Template
                 <select name=theme>
