change heading on index

--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -1,6 +1,6 @@
 <a href="/pages">{{app}} Login</a>
 <hr>
-<h1>{{app}} Page Repository</h1>
+<h1>Page Listing</h1>
 
 {{#pages}}
 <li> <a href={{url}}>{{name}}</a>
