normalize a little template update labels

--- a/templates/template_x.mustache
+++ b/templates/template_x.mustache
@@ -15,7 +15,7 @@
             </label>
 
             <label>
-                Layout CSS
+                Layout Stylesheet (CSS)
                 <textarea name=css placeholder="CSS">{{css}}</textarea>
             </label>
             <label>
@@ -23,7 +23,7 @@
                 <textarea name=view placeholder="Layout">{{view}}</textarea>
             </label>
             <label>
-                JSON Data Template
+                Data Template (<a href="https://en.wikipedia.org/wiki/JSON">JSON</a>)
                 <textarea name=data placeholder="Placeholder Data">{{data}}</textarea>
             </label>
             <label>
