--- a/templates/pages.mustache
+++ b/templates/pages.mustache
@@ -5,7 +5,7 @@
 
         {{> alert_success }}
 
-        <ul>
+        <ul class=listing>
             {{#pages}}
             <li> {{name}} (<a href={{url}}>View</a> | <a href=/pages{{url}}>Edit</a>) </a>
             {{/pages}}
