--- a/templates/templates.mustache
+++ b/templates/templates.mustache
@@ -5,7 +5,7 @@
 
         {{> alert_success }}
 
-        <ul>
+        <ul class=listing>
             {{#templates}}
             <li> <a href={{url}}>&#147;{{name}}&#148; template</a>
             {{/templates}}
