add user create wizard

--- a/templates/layout.mustache
+++ b/templates/layout.mustache
@@ -13,6 +13,9 @@
                 <h1 class="title"> {{ app }} </h1>
 
                 {{#admin}}
+                <a class="menu-item" href="/users/create">
+                    <li>Create User</li>
+                </a>
                 <a class="menu-item" href="/templates">
                     <li>Templates</li>
                 </a>
