--- a/templates/pages.mustache
+++ b/templates/pages.mustache
@@ -1,7 +1,7 @@
 {{< layout }}
     {{$content}}
         <h1>{{app}} Pages</h1>
-        <a href="/pages/create">Add New Page</a>
+        {{#admin}}<a href="/pages/create">Add New Page</a>{{/admin}}
 
         {{> alert_success }}
 
