--- a/templates/create_session.mustache
+++ b/templates/create_session.mustache
@@ -8,6 +8,7 @@
             <label> Login <input type=text name=login value="{{login}}"> </label>
             <label> Password <input type=password name=password value="{{password}}"> </label>
             <input class=button type=submit value="Login">
+            <a href=/password_reset>Reset Password</a>
         </form>
     {{/content}}
 {{/layout}}
